# CUDA-Cellular-Automata

./: .gitignore  CMakeLists.txt  README.md  make_video.sh  slackermanz.frag
ReefCA/: contants.h  conway.cu  conway.cuh  cudahelpers.cu  cudahelpers.cuh  helpers.cpp  helpers.cu  helpers.h  mnca.cu  mnca.cuh  mnca_new.cu  noise.cu  noise.cuh  reefca.h
ReefCA/MNCA/: mnca_run.cu  mnca_test.cu
ReefCA/benchmark/: benchmark.cu
ReefCA/conway/: conway_run.cu
ReefCA/mnca/: generate_mnca.cu  mnca.cu  mnca_gen.cu  nh_generator.cpp  param_generator.cpp  param_generator.h  save_frame.h
resources/rules/: conway.txt  slackermanz_webgl_200.txt
